@@ -1,6 +1,7 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? Feb 2009, PHP 5.2.9
+- Fixed Bug #45923 (mb_st[r]ripos() offset not handled correctly). (Moriyoshi)
 
 12 Feb 2009, PHP 5.2.9RC2
 - Fixed bug #47353 (crash when creating a lot of objects in object destructor).
